--- a/Views/Absences/Details.cshtml
+++ b/Views/Absences/Details.cshtml
@@ -38,13 +38,13 @@
             @Html.DisplayNameFor(model => model.Student)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Student.Address)
+            @Html.DisplayFor(model => model.Student)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Class)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Class.Id)
+            @Html.DisplayFor(model => model.Class)
         </dd>
     </dl>
 </div>
