--- a/Views/Classes/Create.cshtml
+++ b/Views/Classes/Create.cshtml
@@ -18,6 +18,10 @@
                 <span asp-validation-for="Speciality" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="TeacherId" class="control-label"></label>
+                <select asp-for="TeacherId" class ="form-control" asp-items="ViewBag.TeacherId"></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
