--- a/Views/Classes/Delete.cshtml
+++ b/Views/Classes/Delete.cshtml
@@ -17,6 +17,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Speciality)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Teacher)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Teacher.FirstName)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
