--- a/Views/Classes/Details.cshtml
+++ b/Views/Classes/Details.cshtml
@@ -16,6 +16,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Speciality)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Teacher)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Teacher.FirstName)
+        </dd>
     </dl>
 </div>
 <div>
