--- a/Views/Classes/Edit.cshtml
+++ b/Views/Classes/Edit.cshtml
@@ -17,6 +17,11 @@
                 <input asp-for="Speciality" class="form-control" />
                 <span asp-validation-for="Speciality" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="TeacherId" class="control-label"></label>
+                <select asp-for="TeacherId" class="form-control" asp-items="ViewBag.TeacherId"></select>
+                <span asp-validation-for="TeacherId" class="text-danger"></span>
+            </div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
