--- a/Views/Students/Details.cshtml
+++ b/Views/Students/Details.cshtml
@@ -53,6 +53,12 @@
             @Html.DisplayFor(model => model.PhoneNumber)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Class)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Class.Speciality)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.LeftAbsenceDays)
         </dt>
         <dd class = "col-sm-10">
