--- a/Views/Students/Edit.cshtml
+++ b/Views/Students/Edit.cshtml
@@ -48,6 +48,11 @@
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ClassId" class="control-label"></label>
+                <select asp-for="ClassId" class="form-control" asp-items="ViewBag.ClassId"></select>
+                <span asp-validation-for="ClassId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="LeftAbsenceDays" class="control-label"></label>
                 <input asp-for="LeftAbsenceDays" class="form-control" />
                 <span asp-validation-for="LeftAbsenceDays" class="text-danger"></span>
