--- a/Views/Students/Index.cshtml
+++ b/Views/Students/Index.cshtml
@@ -34,6 +34,9 @@
                 @Html.DisplayNameFor(model => model.PhoneNumber)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Class)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.LeftAbsenceDays)
             </th>
             <th></th>
@@ -62,6 +65,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Class.Speciality)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.LeftAbsenceDays)
