--- a/Views/Students/Details.cshtml
+++ b/Views/Students/Details.cshtml
@@ -56,7 +56,7 @@
             @Html.DisplayNameFor(model => model.Class)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Class.Speciality)
+            @Html.DisplayFor(model => model.Class)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.LeftAbsenceDays)
