--- a/Views/Absences/Delete.cshtml
+++ b/Views/Absences/Delete.cshtml
@@ -4,54 +4,54 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1 class="text-2xl font-semibold mb-6">Delete Absence</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Absence</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SequenceNumber)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SequenceNumber)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Reason)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Reason)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Start)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Start)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.End)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.End)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Student)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Student.Address)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Class)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Class.Id)
-        </dd>
+<h3 class="text-lg font-medium text-red-600 mb-4">Are you sure you want to delete this absence?</h3>
+
+<div class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow-md">
+    <h4 class="text-lg font-semibold mb-4">Absence Details</h4>
+    <hr class="mb-6" />
+
+    <!-- Displaying the Absence Details -->
+    <dl class="space-y-4">
+        <div class="flex items-center">
+            <dt class="w-1/3 font-medium text-gray-700">Sequence Number:</dt>
+            <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.SequenceNumber)</dd>
+        </div>
+        <div class="flex items-center">
+            <dt class="w-1/3 font-medium text-gray-700">Reason:</dt>
+            <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.Reason)</dd>
+        </div>
+        <div class="flex items-center">
+            <dt class="w-1/3 font-medium text-gray-700">Start:</dt>
+            <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.Start)</dd>
+        </div>
+        <div class="flex items-center">
+            <dt class="w-1/3 font-medium text-gray-700">End:</dt>
+            <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.End)</dd>
+        </div>
+        <div class="flex items-center">
+            <dt class="w-1/3 font-medium text-gray-700">Student:</dt>
+            <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.Student.FirstName) @Html.DisplayFor(model => model.Student.LastName)</dd>
+        </div>
+        <div class="flex items-center">
+            <dt class="w-1/3 font-medium text-gray-700">Class:</dt>
+            <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.Class.Speciality)</dd>
+        </div>
     </dl>
-    
-    <form asp-action="Delete">
+
+    <!-- Delete Confirmation Form -->
+    <form asp-action="Delete" method="post" class="space-y-4">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <div class="flex justify-between">
+            <!-- Delete Button -->
+            <button type="submit" class="px-4 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-300">
+                Delete
+            </button>
+            <!-- Back to List Button -->
+            <a asp-action="Index" class="px-4 py-2 text-blue-500 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-300">
+                Back to List
+            </a>
+        </div>
     </form>
 </div>
