--- a/Views/Classes/Details.cshtml
+++ b/Views/Classes/Details.cshtml
@@ -4,27 +4,29 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1 class="text-2xl font-semibold mb-6">Class Details</h1>
 
-<div>
-    <h4>Class</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Speciality)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Speciality)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Teacher)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Teacher.FirstName)
-        </dd>
+<div class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow-md">
+    <h4 class="text-lg font-semibold mb-4">Class Information</h4>
+    <hr class="mb-6" />
+
+    <dl class="space-y-4">
+        <div class="flex items-center">
+            <dt class="w-1/3 font-medium text-gray-700">Speciality:</dt>
+            <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.Speciality)</dd>
+        </div>
+        <div class="flex items-center">
+            <dt class="w-1/3 font-medium text-gray-700">Teacher:</dt>
+            <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.Teacher.FirstName) @Html.DisplayFor(model => model.Teacher.LastName)</dd>
+        </div>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+
+    <div class="mt-6 flex justify-between">
+        <a asp-action="Edit" asp-route-id="@Model?.Id" class="inline-block bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-6 rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-400">
+            Edit
+        </a>
+        <a asp-action="Index" class="px-4 py-2 text-blue-500 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-300">
+            Back to List
+        </a>
+    </div>
 </div>
