--- a/Views/Students/Delete.cshtml
+++ b/Views/Students/Delete.cshtml
@@ -4,72 +4,62 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1 class="text-2xl font-semibold mb-6">Delete Student</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Student</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MiddleName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MiddleName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Gender)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Gender)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Age)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Age)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Address)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PhoneNumber)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Class)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Class.Speciality)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LeftAbsenceDays)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LeftAbsenceDays)
-        </dd>
+<h3 class="text-lg font-medium text-red-600 mb-4">Are you sure you want to delete this?</h3>
+
+<div class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow-md">
+    <h4 class="text-lg font-semibold mb-4">Student Details</h4>
+    <hr class="mb-6" />
+
+    <dl class="space-y-4">
+        <div class="flex items-center">
+            <dt class="w-1/3 font-medium text-gray-700">First Name:</dt>
+            <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.FirstName)</dd>
+        </div>
+        <div class="flex items-center">
+            <dt class="w-1/3 font-medium text-gray-700">Middle Name:</dt>
+            <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.MiddleName)</dd>
+        </div>
+        <div class="flex items-center">
+            <dt class="w-1/3 font-medium text-gray-700">Last Name:</dt>
+            <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.LastName)</dd>
+        </div>
+        <div class="flex items-center">
+            <dt class="w-1/3 font-medium text-gray-700">Gender:</dt>
+            <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.Gender)</dd>
+        </div>
+        <div class="flex items-center">
+            <dt class="w-1/3 font-medium text-gray-700">Age:</dt>
+            <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.Age)</dd>
+        </div>
+        <div class="flex items-center">
+            <dt class="w-1/3 font-medium text-gray-700">Address:</dt>
+            <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.Address)</dd>
+        </div>
+        <div class="flex items-center">
+            <dt class="w-1/3 font-medium text-gray-700">Phone Number:</dt>
+            <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.PhoneNumber)</dd>
+        </div>
+        <div class="flex items-center">
+            <dt class="w-1/3 font-medium text-gray-700">Class:</dt>
+            <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.Class.Speciality)</dd>
+        </div>
+        <div class="flex items-center">
+            <dt class="w-1/3 font-medium text-gray-700">Left Absence Days:</dt>
+            <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.LeftAbsenceDays)</dd>
+        </div>
     </dl>
-    
-    <form asp-action="Delete">
+
+    <form asp-action="Delete" class="space-y-4">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <div class="flex justify-between">
+            <button type="submit" class="px-4 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-300">
+                Delete
+            </button>
+            <a asp-action="Index" class="px-4 py-2 text-blue-500 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-300">
+                Back to List
+            </a>
+        </div>
     </form>
 </div>
