--- a/Views/Absences/Edit.cshtml
+++ b/Views/Absences/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h1 class="text-2xl font-semibold mb-6">Edit Absence</h1>
 
-<div class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow-md">
+<div class="max-w-3xl mx-auto bg-white p-6 rounded-lg shadow-md">
     <h4 class="text-lg font-semibold mb-4">Absence Information</h4>
     <hr class="mb-6" />
 
@@ -62,17 +62,18 @@
 
         <!-- Save and Back to List Buttons -->
         <div class="form-group flex justify-between">
+            <a asp-action="Index" class="px-4 py-2 text-blue-500 font-bold hover:underline focus:outline-none focus:ring-2 focus:ring-blue-300">
+                Back to List
+            </a>
             <button type="submit" class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-green-400">
                 Save
             </button>
-            <a asp-action="Index" class="px-4 py-2 text-blue-500 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-300">
-                Back to List
-            </a>
         </div>
     </form>
 </div>
 
 @section Scripts {
+
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
