--- a/Views/Classes/Details.cshtml
+++ b/Views/Classes/Details.cshtml
@@ -21,12 +21,19 @@
         </div>
     </dl>
 
+    <!-- Change button positions -->
     <div class="mt-6 flex justify-between">
-        <a asp-action="Edit" asp-route-id="@Model?.Id" class="inline-block bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-6 rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-400">
-            Edit
-        </a>
-        <a asp-action="Index" class="px-4 py-2 text-blue-500 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-300">
-            Back to List
-        </a>
+        <!-- Back to List Button (on the left) -->
+        <div class="flex items-center">
+            <a asp-action="Index" class="px-4 py-2 text-blue-500 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-300">
+                Back to List
+            </a>
+        </div>
+        <!-- Edit Button (on the right) -->
+        <div class="flex items-center">
+            <a asp-action="Edit" asp-route-id="@Model?.Id" class="inline-block bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-6 rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-400">
+                Edit
+            </a>
+        </div>
     </div>
 </div>
