--- a/Views/Teachers/Details.cshtml
+++ b/Views/Teachers/Details.cshtml
@@ -26,11 +26,13 @@
     </dl>
 
     <div class="mt-6 flex justify-between">
-        <a asp-action="Edit" asp-route-id="@Model?.Id" class="inline-block bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-6 rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-400">
-            Edit
-        </a>
+        <!-- Back to List button (on the left) -->
         <a asp-action="Index" class="px-4 py-2 text-blue-500 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-300">
             Back to List
+        </a>
+        <!-- Edit button (on the right) -->
+        <a asp-action="Edit" asp-route-id="@Model?.Id" class="inline-block bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-6 rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-400">
+            Edit
         </a>
     </div>
 </div>
