--- a/Views/Teachers/Edit.cshtml
+++ b/Views/Teachers/Edit.cshtml
@@ -32,12 +32,14 @@
         <input type="hidden" asp-for="Id" />
 
         <div class="form-group flex justify-between">
-            <button type="submit" class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-green-400">
-                Save
-            </button>
+            <!-- Back to List button (on the left) -->
             <a asp-action="Index" class="px-4 py-2 text-blue-500 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-300">
                 Back to List
             </a>
+            <!-- Save button (on the right) -->
+            <button type="submit" class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-green-400">
+                Save
+            </button>
         </div>
     </form>
 </div>
